feat: add proxy setting server and update role swagger
