# internal/domain/auth/delivery/http/handlers.go
@@ -9,6 +9,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary Авторизация
+// @Tags 	Аунтификация
+// @Accept 	json
+// @Produce json
+// @Param 	input body   dto.SignInDTO true "credentials"
+// @Success 200 {object} role.Model
+// @Failure 400 {object} api.ResponseError
+// @Router /sign-in [post]
+// handlerSignIn - authorization
 func (d DeliveryHttpAuth) handlerSignIn(ctx *gin.Context) {
 	body, err := api.ParseAndValidateJSON[dto.SignInDTO](ctx)
 	if err != nil {
@@ -24,6 +33,16 @@ func (d DeliveryHttpAuth) handlerSignIn(ctx *gin.Context) {
 
 	ctx.JSON(http.StatusOK, user)
 }
+
+// @Summary Регистрация
+// @Tags 	Аунтификация
+// @Accept 	json
+// @Produce json
+// @Param 	input body   dto.SignUpDTO true "credentials"
+// @Success 201 {object} role.Model
+// @Failure 400 {object} api.ResponseError
+// @Router /sign-up [post]
+// handlerSignUp - register
 func (d DeliveryHttpAuth) handlerSignUp(ctx *gin.Context) {
 	body, err := api.ParseAndValidateJSON[dto.SignUpDTO](ctx)
 	if err != nil {
@@ -37,5 +56,5 @@ func (d DeliveryHttpAuth) handlerSignUp(ctx *gin.Context) {
 		return
 	}
 
-	ctx.JSON(http.StatusOK, user)
+	ctx.JSON(http.StatusCreated, user)
 }
